update NLP piece

--- a/BabyAI-NLP/04_use_chatgpt_prompt.ipynb
+++ b/BabyAI-NLP/04_use_chatgpt_prompt.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,12 +47,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Question 1"
+    "# 1. Chatbot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,113 +69,91 @@
        " '5. Social equity analysis: Supervised learning algorithms can be applied to analyze social and demographic data in urban areas, such as income levels, education levels, or access to public services. This information can help urban planners identify areas with higher social needs, plan for equitable distribution of resources, and design policies to address social inequalities.']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
     "prompt = \"\"\"List 5 applications of supervised learning in urban studies or city planning related-research.\"\"\"\n",
     "messages = [{\"role\": \"user\", \"content\": prompt}]\n",
-    "answer = get_completion(prompt)\n",
+    "answer = get_completion(messages)\n",
     "messages.append({\"role\": \"assistant\", \"content\": answer})\n",
     "answer.split('\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = \"\"\"For each of these five application, please list their potential input and output data and format in a json format like:\n",
+    "prompt = \"\"\"For each of these five application, please list their potential input and output data example and format in a json format like:\n",
     "{\n",
-    "    \"application 1\": {\n",
-    "        \"input\": \"input 1\",\n",
-    "        \"output\": \"output 1\"\n",
+    "    \"Land use classification\": {\n",
+    "        \"input\": \"satellite image\",\n",
+    "        \"output\": \"land use map\"\n",
     "    },\n",
     "    ...\n",
     "    }\"\"\"\n",
     "# answer = get_completion(prompt)\n",
     "# answer.split('\\n')\n",
-    "messages.append({\"role\": \"user\", \"content\": prompt})\n",
+    "messages.append({\"role\": \"user\", \"content\": prompt}) # here we append the prompt to the previous messages\n",
     "answer2 = get_completion(messages)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['{',\n",
-       " '    \"application 1\": {',\n",
-       " '        \"input\": {',\n",
-       " '            \"land_use_data\": \"path/to/land_use_data.csv\"',\n",
-       " '        },',\n",
-       " '        \"output\": {',\n",
-       " '            \"land_use_classification\": \"path/to/land_use_classification_results.csv\"',\n",
-       " '        }',\n",
+       " '    \"Land use classification\": {',\n",
+       " '        \"input\": \"satellite image\",',\n",
+       " '        \"output\": \"land use map\"',\n",
        " '    },',\n",
-       " '    \"application 2\": {',\n",
-       " '        \"input\": {',\n",
-       " '            \"traffic_data\": \"path/to/traffic_data.csv\",',\n",
-       " '            \"road_conditions\": \"path/to/road_conditions.csv\",',\n",
-       " '            \"public_transportation_data\": \"path/to/public_transportation_data.csv\"',\n",
-       " '        },',\n",
-       " '        \"output\": {',\n",
-       " '            \"traffic_patterns\": \"path/to/traffic_patterns_results.csv\",',\n",
-       " '            \"congestion_levels\": \"path/to/congestion_levels_results.csv\",',\n",
-       " '            \"travel_demand\": \"path/to/travel_demand_results.csv\"',\n",
-       " '        }',\n",
+       " '    \"Transportation planning\": {',\n",
+       " '        \"input\": \"historical traffic data, road conditions, public transportation usage\",',\n",
+       " '        \"output\": \"traffic patterns, congestion levels, travel demand\"',\n",
        " '    },',\n",
-       " '    \"application 3\": {',\n",
-       " '        \"input\": {',\n",
-       " '            \"population_growth_data\": \"path/to/population_growth_data.csv\",',\n",
-       " '            \"housing_demand_data\": \"path/to/housing_demand_data.csv\",',\n",
-       " '            \"economic_indicators_data\": \"path/to/economic_indicators_data.csv\"',\n",
-       " '        },',\n",
-       " '        \"output\": {',\n",
-       " '            \"urban_growth_prediction\": \"path/to/urban_growth_prediction_results.csv\"',\n",
-       " '        }',\n",
+       " '    \"Urban growth prediction\": {',\n",
+       " '        \"input\": \"historical data on population growth, housing demand, economic indicators\",',\n",
+       " '        \"output\": \"prediction of future urban growth and expansion\"',\n",
        " '    },',\n",
-       " '    \"application 4\": {',\n",
-       " '        \"input\": {',\n",
-       " '            \"air_quality_data\": \"path/to/air_quality_data.csv\",',\n",
-       " '            \"noise_pollution_data\": \"path/to/noise_pollution_data.csv\",',\n",
-       " '            \"water_quality_data\": \"path/to/water_quality_data.csv\"',\n",
-       " '        },',\n",
-       " '        \"output\": {',\n",
-       " '            \"environmental_impact_assessment\": \"path/to/environmental_impact_assessment_results.csv\"',\n",
-       " '        }',\n",
+       " '    \"Environmental impact assessment\": {',\n",
+       " '        \"input\": \"data on air quality, noise pollution, water quality, environmental factors\",',\n",
+       " '        \"output\": \"assessment of environmental impact and potential risks\"',\n",
        " '    },',\n",
-       " '    \"application 5\": {',\n",
-       " '        \"input\": {',\n",
-       " '            \"social_demographic_data\": \"path/to/social_demographic_data.csv\",',\n",
-       " '            \"public_service_access_data\": \"path/to/public_service_access_data.csv\"',\n",
-       " '        },',\n",
-       " '        \"output\": {',\n",
-       " '            \"social_equity_analysis\": \"path/to/social_equity_analysis_results.csv\"',\n",
-       " '        }',\n",
+       " '    \"Social equity analysis\": {',\n",
+       " '        \"input\": \"social and demographic data (income levels, education levels, access to public services)\",',\n",
+       " '        \"output\": \"identification of areas with higher social needs, equitable resource distribution\"',\n",
        " '    }',\n",
        " '}']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "answer2.split('\\n')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Summarizing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,46 +206,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Completed task 1\n",
-      "Completed task 2\n"
+      "Completed task 1: [\n",
+      "    \"opportunity mapping\",\n",
+      "    \"geographic information systems (GIS) technology\",\n",
+      "    \"confirmatory factor analysis\",\n",
+      "    \"unsupervised machine learning\",\n",
+      "    \"neighborhood typology\"\n",
+      "]\n",
+      "Completed task 2: [\n",
+      "    \"geographic information systems (GIS) technology\",\n",
+      "    \"confirmatory factor analysis\",\n",
+      "    \"unsupervised machine learning\"\n",
+      "]\n"
      ]
     }
    ],
    "source": [
     "task_ls = []\n",
+    "# we only test for 2 abstracts\n",
     "for i, temp in enumerate(abstracts[:2]):\n",
     "    prompt = prompt.format(abs_text=temp)\n",
-    "    completion = get_completion(prompt)\n",
+    "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
+    "    completion = get_completion(messages)\n",
     "    task_ls.append(completion)\n",
-    "    print(f\"Completed task {i+1}\")"
+    "    print(f\"Completed task {i+1}: {completion}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Infering sentiment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['[\\n    \"geographic information systems (GIS) technology\",\\n    \"confirmatory factor analysis\",\\n    \"unsupervised machine learning\"\\n]',\n",
-       " '[\\n    \"geographic information systems (GIS) technology\",\\n    \"confirmatory factor analysis\",\\n    \"unsupervised machine learning\"\\n]']"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "task_ls"
+    "lamp_review = \"\"\"\n",
+    "Needed a nice lamp for my bedroom, and this one had \\\n",
+    "additional storage and not too high of a price point. \\\n",
+    "Got it fast.  The string to our lamp broke during the \\\n",
+    "transit and the company happily sent over a new one. \\\n",
+    "Came within a few days as well. It was easy to put \\\n",
+    "together.  I had a missing part, so I contacted their \\\n",
+    "support and they very quickly got me the missing piece! \\\n",
+    "Lumina seems to me to be a great company that cares \\\n",
+    "about their customers and products!!\n",
+    "\"\"\"\n",
+    "prompt = f\"\"\"\n",
+    "What is the sentiment of the following product review, \n",
+    "which is delimited with triple backticks?\n",
+    "\n",
+    "Review text: '''{lamp_review}'''\n",
+    "\"\"\"\n",
+    "response = get_completion(prompt)\n",
+    "print(response)"
    ]
   },
   {
@@ -357,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.13"
   },
   "orig_nbformat": 4
  },
