--- a/HousingPricePredictor/02b_advanced_feature_engineering.ipynb
+++ b/HousingPricePredictor/02b_advanced_feature_engineering.ipynb
@@ -37,12 +37,8 @@
     "from matplotlib.ticker import MaxNLocator\n",
     "\n",
     "# SKlearn\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
-    "from sklearn.model_selection import train_test_split, RandomizedSearchCV\n",
     "from sklearn.preprocessing import MinMaxScaler,  OneHotEncoder\n",
-    "from sklearn.linear_model import LinearRegression, Ridge\n",
-    "from sklearn.impute import SimpleImputer, KNNImputer\n",
-    "from sklearn.linear_model import LinearRegression, Ridge\n"
+    "from sklearn.impute import SimpleImputer, KNNImputer"
    ]
   },
   {
@@ -568,8 +564,6 @@
     "\n",
     "# Example usage\n",
     "df = LotFrontage_KNN_Imputer(df)\n",
-    "\n",
-    "\n",
     "train = LotFrontage_KNN_Imputer(train)\n",
     "test = LotFrontage_KNN_Imputer(test)"
    ]
