--- a/BabyAI-NLP/02_word_frequency.ipynb
+++ b/BabyAI-NLP/02_word_frequency.ipynb
@@ -784,7 +784,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Coursework: Experiment with Scattertext\n",
+    "# Experiment with Scattertext\n",
     "[Source](https://github.com/JasonKessler/scattertext)\n",
     "A tool for finding distinguishing terms in corpora and displaying them in an interactive HTML scatter plot. Points corresponding to terms are selectively labeled so that they don't overlap with other labels or points.\n",
     "\n",
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,6 +831,46 @@
    "source": [
     "# !pip install scattertext\n",
     "DF.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test dispersion measures\n",
+    "**dispersion**: the degree to which occurrences of a word are distributed throughout a corpus evenly or unevenly/clumpily."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       (as, evidence, of, the, contextual, effects, o...\n",
+       "1       (initiated, by, the, university, consortium, o...\n",
+       "2       (improvements, of, machine, learning, -, based...\n",
+       "3       (earthquake, prediction, is, a, popular, topic...\n",
+       "4       (land, use, and, land, cover, (, lulc, ), info...\n",
+       "                              ...                        \n",
+       "1926    (3d, city, modeling, is, an, interesting, subj...\n",
+       "1927    (the, combination, of, rapid, urbanization, ,,...\n",
+       "1928    (injuries, have, become, devastating, and, oft...\n",
+       "1929    (sustainable, urban, growth, advocates, the, i...\n",
+       "1930    (although, reliable, and, accurate, inventoryi...\n",
+       "Name: parsed, Length: 1931, dtype: object"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DF['parsed'] = DF['Abstract'].apply(st.whitespace_nlp_with_sentences)\n",
+    "DF['parsed']"
    ]
   },
   {
@@ -929,7 +969,6 @@
     }
    ],
    "source": [
-    "DF['parsed'] = DF['Abstract'].apply(st.whitespace_nlp_with_sentences)\n",
     "corpus = (st.CorpusWithoutCategoriesFromParsedDocuments(DF, \n",
     "                              parsed_col = 'parsed')\n",
     "          .build()\n",
