update NLP pieces

--- a/BabyAI-NLP/03_transformer.ipynb
+++ b/BabyAI-NLP/03_transformer.ipynb
@@ -70,7 +70,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!which python"
+    "!which python #You can make sure that the environment is activated by running the which python command: if it points to the virtual environment, then you have successfully activated it!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now start Building with transformer"
    ]
   },
   {
