update course materials

--- a/HousingPricePredictor/02_linear_models.ipynb
+++ b/HousingPricePredictor/02_linear_models.ipynb
@@ -39,23 +39,31 @@
     "<img src=\"../asset/linear_simple.png\" alt=\"linear_simple\" style=\"width:40%; border:0;\">\n",
     "</p>\n",
     "\n",
-    "2. The goal for a linear model then becomes to optimize the weight (b) via the cost function.\n",
+    "2. The goal for a linear model then becomes to optimize the weight (b) via the cost function. RSS: residual sum of squares.\n",
     "<p align=\"center\">\n",
     "<img src=\"../asset/linear_cost_function.webp\" alt=\"linear_cost\" style=\"width:40%; border:0;\">\n",
     "</p>\n",
     "\n",
     "3. Regularization: use \\\\(  \\lambda \\\\) to avoid overfitting,<br>\n",
+    "Lasso, Ridge, and ElasticNet are part of the Linear Regression family. The main difference among them is whether the model is penalized for its weights.\n",
     "* Lasso: This is a regularization technique used in feature selection using a Shrinkage method also referred to as the penalized regression method. Lasso is short for **Least Absolute Shrinkage and Selection Operator**, which is used both for regularization and model selection. If a model uses the L1 regularization technique, then it is called lasso regression.\n",
     "<p align=\"center\">\n",
     "<img src=\"../asset/lasso_cost.webp\" alt=\"lasso_cost\" style=\"width:40%; border:0;\">\n",
     "</p>\n",
-    "* Ridge: Similar to the lasso regression, ridge regression puts a similar constraint on the coefficients by introducing a penalty factor. However, while lasso regression takes the magnitude of the coefficients, ridge regression takes the square. Ridge regression is also referred to as L2 Regularization.\n",
+    "* Ridge: Similar to the lasso regression, ridge regression puts a similar constraint on the coefficients by introducing a penalty factor. However, while lasso regression takes the magnitude of the coefficients, ridge regression takes the square. Ridge regression is also referred to as L2 Regularization. It penalized the extremes of weights.\n",
     "<p align=\"center\">\n",
     "<img src=\"../asset/ridge_cost.webp\" alt=\"ridge_cost\" style=\"width:40%; border:0;\">\n",
     "</p>\n",
     "<p align=\"center\">\n",
     "<img src=\"../asset/lasso_ridge_comp.png\" alt=\"lasso_ridge_comp\" style=\"width:40%; border:0;\">\n",
     "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question: what happened if you don't scale your data?"
    ]
   },
   {
