--- a/BabyAI-NLP/03_transformer.ipynb
+++ b/BabyAI-NLP/03_transformer.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Set up in google colab"
+    "#### Set up in google [colab](https://colab.research.google.com/github/huggingface/notebooks/blob/master/course/en/chapter1/section3.ipynb?authuser=1)"
    ]
   },
   {
