--- a/HousingPricePredictor/03_nonlinear_models.ipynb
+++ b/HousingPricePredictor/03_nonlinear_models.ipynb
@@ -2611,6 +2611,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
