--- a/BabyAI-NLP/02_word_frequency.ipynb
+++ b/BabyAI-NLP/02_word_frequency.ipynb
@@ -68,7 +68,12 @@
     "# !python -m spacy download en_core_web_lg\n",
     "# !pip install spacy\n",
     "# !pip install wordcloud\n",
-    "# !pip install nltk"
+    "# !pip install nltk\n",
+    "# alternative to load en_core_web_sm\n",
+    "\n",
+    "# import spacy.cli\n",
+    "# spacy.cli.download(\"en_core_web_lg\")\n",
+    "# nlp = spacy.load(\"en_core_web_lg\")"
    ]
   },
   {
