--- a/BabyAI-NLP/04_use_chatgpt_prompt.ipynb
+++ b/BabyAI-NLP/04_use_chatgpt_prompt.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        " '5. Social equity analysis: Supervised learning algorithms can be applied to analyze social and demographic data in urban areas, such as income levels, education levels, or access to public services. This information can help urban planners identify areas with higher social needs, plan for equitable distribution of resources, and design policies to address social inequalities.']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,6 +80,55 @@
     "answer = get_completion(messages)\n",
     "messages.append({\"role\": \"assistant\", \"content\": answer})\n",
     "answer.split('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = \"For each of these five application, please list their potential input and output data\"\n",
+    "messages.append({\"role\": \"user\", \"content\": prompt}) # here we append the prompt to the previous messages\n",
+    "answer2 = get_completion(messages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1. Land use classification:',\n",
+       " '   - Input data: Satellite imagery, aerial photographs, GIS data (e.g., land parcel boundaries, road networks), land use surveys.',\n",
+       " '   - Output data: Classified land use maps indicating the distribution of different land uses in the urban area.',\n",
+       " '',\n",
+       " '2. Transportation planning:',\n",
+       " '   - Input data: Traffic flow data, road network data, public transportation data (e.g., bus routes, schedules, ridership), historical travel patterns, GPS data.',\n",
+       " '   - Output data: Predictions of traffic patterns, congestion levels, travel demand, optimal transportation routes, and schedules.',\n",
+       " '',\n",
+       " '3. Urban growth prediction:',\n",
+       " '   - Input data: Historical population data, housing data (e.g., number of housing units, vacancy rates), economic indicators (e.g., GDP, employment rates), land use data.',\n",
+       " '   - Output data: Predictions of future population growth, housing demand, economic development, and areas of potential urban expansion.',\n",
+       " '',\n",
+       " '4. Environmental impact assessment:',\n",
+       " '   - Input data: Environmental sensor data (e.g., air quality, noise levels, water quality), land use data, topographic data, climate data.',\n",
+       " '   - Output data: Assessment of potential environmental impacts, identification of areas at risk, recommendations for mitigating measures, and sustainable development strategies.',\n",
+       " '',\n",
+       " '5. Social equity analysis:',\n",
+       " '   - Input data: Census data, demographic data, income data, education data, access to public services data, land use data.',\n",
+       " '   - Output data: Analysis of social and demographic patterns, identification of areas with higher social needs, recommendations for equitable resource allocation, and policies to address social inequalities.']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "answer2.split(\"\\n\")"
    ]
   },
   {
@@ -153,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,9 +297,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sentiment of the product review is positive.\n"
+     ]
+    }
+   ],
    "source": [
     "lamp_review = \"\"\"\n",
     "Needed a nice lamp for my bedroom, and this one had \\\n",
@@ -269,7 +326,8 @@
     "\n",
     "Review text: '''{lamp_review}'''\n",
     "\"\"\"\n",
-    "response = get_completion(prompt)\n",
+    "messages = [{\"role\": \"user\", \"content\": prompt}]\n",
+    "response = get_completion(messages)\n",
     "print(response)"
    ]
   },
