--- a/ClusterSpacewithMobility/02_lab.ipynb
+++ b/ClusterSpacewithMobility/02_lab.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'plotly'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/Users/yuan/Documents/GitHub/pitaya/ClusterSpacewithMobility/02_lab.ipynb Cell 1\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yuan/Documents/GitHub/pitaya/ClusterSpacewithMobility/02_lab.ipynb#W0sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcm\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mcm\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yuan/Documents/GitHub/pitaya/ClusterSpacewithMobility/02_lab.ipynb#W0sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mprince\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/yuan/Documents/GitHub/pitaya/ClusterSpacewithMobility/02_lab.ipynb#W0sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mplotly\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mexpress\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpx\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yuan/Documents/GitHub/pitaya/ClusterSpacewithMobility/02_lab.ipynb#W0sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mplotly\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mgraph_objects\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mgo\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yuan/Documents/GitHub/pitaya/ClusterSpacewithMobility/02_lab.ipynb#W0sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m mpl\u001b[39m.\u001b[39mstyle\u001b[39m.\u001b[39muse(\u001b[39m'\u001b[39m\u001b[39mdefault\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'plotly'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import geopandas as gpd\n",
@@ -27,12 +39,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting plotly\n",
+      "  Obtaining dependency information for plotly from https://files.pythonhosted.org/packages/a8/07/72953cf70e3bd3a24cbc3e743e6f8539abe6e3e6d83c3c0c83426eaffd39/plotly-5.18.0-py3-none-any.whl.metadata\n",
+      "  Downloading plotly-5.18.0-py3-none-any.whl.metadata (7.0 kB)\n",
+      "Collecting tenacity>=6.2.0 (from plotly)\n",
+      "  Obtaining dependency information for tenacity>=6.2.0 from https://files.pythonhosted.org/packages/f4/f1/990741d5bb2487d529d20a433210ffa136a367751e454214013b441c4575/tenacity-8.2.3-py3-none-any.whl.metadata\n",
+      "  Downloading tenacity-8.2.3-py3-none-any.whl.metadata (1.0 kB)\n",
+      "Requirement already satisfied: packaging in /Users/yuan/opt/anaconda3/envs/ox/lib/python3.11/site-packages (from plotly) (23.1)\n",
+      "Downloading plotly-5.18.0-py3-none-any.whl (15.6 MB)\n",
+      "\u001b[2K   \u001b[91m━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.0/15.6 MB\u001b[0m \u001b[31m41.9 kB/s\u001b[0m eta \u001b[36m0:05:03\u001b[0mm"
+     ]
+    }
+   ],
    "source": [
     "# !pip install prince\n",
-    "# !pip install plotly"
+    "!pip install plotly\n",
+    "# !pip install fuzzy-c-means"
    ]
   },
   {
@@ -13542,7 +13571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
