--- a/ClusterSpacewithMobility/02_lab.ipynb
+++ b/ClusterSpacewithMobility/02_lab.ipynb
@@ -54,7 +54,7 @@
       "  Downloading tenacity-8.2.3-py3-none-any.whl.metadata (1.0 kB)\n",
       "Requirement already satisfied: packaging in /Users/yuan/opt/anaconda3/envs/ox/lib/python3.11/site-packages (from plotly) (23.1)\n",
       "Downloading plotly-5.18.0-py3-none-any.whl (15.6 MB)\n",
-      "\u001b[2K   \u001b[91m━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.0/15.6 MB\u001b[0m \u001b[31m41.9 kB/s\u001b[0m eta \u001b[36m0:05:03\u001b[0mm"
+      "\u001b[2K   \u001b[91m━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.1/15.6 MB\u001b[0m \u001b[31m26.0 kB/s\u001b[0m eta \u001b[36m0:07:25\u001b[0mm"
      ]
     }
    ],
